InProgress #27341 - [Feature] Add Oauth2 share authentication